--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "@cruk/cruk-react-components": "^1.1.8",
+    "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.3.9",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6"
+    "react-hook-form": "^7.44.2",
+    "styled-components": "^5.3.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@cruk/eslint-config": "^1.0.6",
